Dynamic-access coverage for org.jboss.logmanager.formatters.Formatters$12 (29/29)